--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,12 +18,17 @@ SOURCE_GROUP("Headers" FILES ${INC_FILES})
 
 find_package(Gosu REQUIRED)
 
-INCLUDE_DIRECTORIES(${Gosu_INCLUDE_DIRS})
-LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS})
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(CAIROMM REQUIRED cairomm-1.0)
+
+INCLUDE_DIRECTORIES(${Gosu_INCLUDE_DIRS}
+                    ${CAIROMM_INCLUDE_DIRS})
+LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS}
+                 ${CAIROMM_LIBRARY_DIRS})
 
 #Build
 ADD_EXECUTABLE(GraphGame ${SRC_FILES})
 set_target_properties(GraphGame PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
 SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
-TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES})
+TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES})
