--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,11 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 PROJECT(GraphGame)
 
+SET(CMAKE_CXX_COMPILER g++-4.8)
+SET(CMAKE_C_COMPILER gcc-4.8)
+
 #Projects source files
 SET(SRC_FILES
-	main.cpp
 	Node.cpp
 	Graph.cpp
 	)
@@ -18,6 +20,7 @@ SET(INC_FILES
 SOURCE_GROUP("Sources" FILES ${SRC_FILES})
 SOURCE_GROUP("Headers" FILES ${INC_FILES})
 
+if(NOT APPLE)
 find_package(Gosu REQUIRED)
 
 find_package(PkgConfig REQUIRED)
@@ -29,8 +32,17 @@ LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS}
                  ${CAIROMM_LIBRARY_DIRS})
 
 #Build
-ADD_EXECUTABLE(GraphGame ${SRC_FILES})
+ADD_EXECUTABLE(GraphGame main.cpp ${SRC_FILES})
 set_target_properties(GraphGame PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
 SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
 TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES})
+endif()
+
+
+#Test
+ADD_EXECUTABLE(GraphTest Test.cpp ${SRC_FILES})
+set_target_properties(GraphTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
+
+SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
+TARGET_LINK_LIBRARIES(GraphTest ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES})
