graph stuff was compiled twice
now it's a lib that is linked into both executables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ SET(INC_FILES
 SOURCE_GROUP("Sources" FILES ${SRC_FILES})
 SOURCE_GROUP("Headers" FILES ${INC_FILES})
 
+add_library(graph ${SRC_FILES})
+SET_TARGET_PROPERTIES(graph PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
+
 if(NOT APPLE)
 find_package(Gosu REQUIRED)
 
@@ -32,17 +35,17 @@ LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS}
                  ${CAIROMM_LIBRARY_DIRS})
 
 #Build
-ADD_EXECUTABLE(GraphGame main.cpp ${SRC_FILES})
+ADD_EXECUTABLE(GraphGame main.cpp)
 set_target_properties(GraphGame PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
 SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
-TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES})
+TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
 endif()
 
 
 #Test
-ADD_EXECUTABLE(GraphTest Test.cpp ${SRC_FILES})
+ADD_EXECUTABLE(GraphTest Test.cpp)
 set_target_properties(GraphTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
 SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
-TARGET_LINK_LIBRARIES(GraphTest ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES})
+TARGET_LINK_LIBRARIES(GraphTest ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
