arrays of optional are stupid, use vector of unique ptr

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,7 @@ LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS}
 ADD_EXECUTABLE(GraphGame main.cpp)
 set_target_properties(GraphGame PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
+SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3 -Wall -Wextra -pedantic")
 TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
 endif()
 
@@ -47,5 +47,5 @@ endif()
 ADD_EXECUTABLE(GraphTest Test.cpp)
 set_target_properties(GraphTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
+SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3 -Wall -Wextra -pedantic")
 TARGET_LINK_LIBRARIES(GraphTest ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
