--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ SET(CMAKE_C_COMPILER gcc-4.8)
 SET(SRC_FILES
 	Node.cpp
 	Graph.cpp
+	FloydWarshall.cpp
+	Betweenness.cpp
 	)
 
 #Projects headers files	
@@ -21,7 +23,7 @@ SOURCE_GROUP("Sources" FILES ${SRC_FILES})
 SOURCE_GROUP("Headers" FILES ${INC_FILES})
 
 add_library(graph ${SRC_FILES})
-SET_TARGET_PROPERTIES(graph PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3")
+SET_TARGET_PROPERTIES(graph PROPERTIES COMPILE_FLAGS "-g -std=c++11 -O3 -Wall -Wextra -Wno-import -Wno-deprecated")
 
 if(NOT APPLE)
 find_package(Gosu REQUIRED)
@@ -38,7 +40,7 @@ LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS}
 ADD_EXECUTABLE(GraphGame main.cpp)
 set_target_properties(GraphGame PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3 -Wall -Wextra -pedantic")
+SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS "-g -std=c++11 -O3 -Wall -Wextra -Wno-import -Wno-deprecated")
 TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
 endif()
 
@@ -47,5 +49,5 @@ endif()
 ADD_EXECUTABLE(GraphTest Test.cpp)
 set_target_properties(GraphTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS "-g -std=c++0x -O3 -Wall -Wextra -pedantic")
+SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS "-g -std=c++11 -O3 -Wall -Wextra -Wno-import -Wno-deprecated")
 TARGET_LINK_LIBRARIES(GraphTest ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
