had to change compiler flags in 3 locations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,8 +27,10 @@ SET(INC_FILES
 SOURCE_GROUP("Sources" FILES ${SRC_FILES})
 SOURCE_GROUP("Headers" FILES ${INC_FILES})
 
+set(GGG_COMPILE_FLAGS "-g -std=c++11 -O3 -Wall -Wextra -Wno-deprecated")
+
 add_library(graph ${SRC_FILES})
-SET_TARGET_PROPERTIES(graph PROPERTIES COMPILE_FLAGS "-g -std=c++11 -O3 -Wall -Wextra -Wno-import -Wno-deprecated")
+SET_TARGET_PROPERTIES(graph PROPERTIES COMPILE_FLAGS ${GGG_COMPILE_FLAGS})
 
 if(NOT APPLE)
 find_package(Gosu REQUIRED)
@@ -45,7 +47,7 @@ LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS}
 ADD_EXECUTABLE(GraphGame main.cpp)
 set_target_properties(GraphGame PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS "-g -std=c++11 -O3 -Wall -Wextra -Wno-import -Wno-deprecated")
+SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS ${GGG_COMPILE_FLAGS})
 TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
 endif()
 
@@ -54,5 +56,5 @@ endif()
 ADD_EXECUTABLE(GraphTest Test.cpp)
 set_target_properties(GraphTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
-SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS "-g -std=c++11 -O3 -Wall -Wextra -Wno-import -Wno-deprecated")
+SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS ${GGG_COMPILE_FLAGS})
 TARGET_LINK_LIBRARIES(GraphTest ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
