didn't compile on mac

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,24 +37,23 @@ set(GGG_COMPILE_FLAGS "-g -std=c++11 -O3 -Wall -Wextra -Wno-deprecated")
 add_library(graph ${SRC_FILES})
 SET_TARGET_PROPERTIES(graph PROPERTIES COMPILE_FLAGS ${GGG_COMPILE_FLAGS})
 
-if(NOT APPLE)
+
 find_package(Gosu REQUIRED)
 
 find_package(PkgConfig REQUIRED)
-pkg_check_modules(CAIROMM REQUIRED cairomm-1.0)
 
-INCLUDE_DIRECTORIES(${Gosu_INCLUDE_DIRS}
-                    ${CAIROMM_INCLUDE_DIRS})
-LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS}
-                 ${CAIROMM_LIBRARY_DIRS})
+INCLUDE_DIRECTORIES(${Gosu_INCLUDE_DIRS})
+LINK_DIRECTORIES(${Gosu_LIBRARY_DIRS})
 
 #Build
 ADD_EXECUTABLE(GraphGame main.cpp)
 set_target_properties(GraphGame PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
 SET_TARGET_PROPERTIES(GraphGame PROPERTIES COMPILE_FLAGS ${GGG_COMPILE_FLAGS})
-TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
+if(APPLE)
+    set_target_properties(GraphGame PROPERTIES LINK_FLAGS ${Gosu_APPLE_FRAMEWORKS})
 endif()
+TARGET_LINK_LIBRARIES(GraphGame ${Gosu_LIBRARIES} graph)
 
 
 #Test
@@ -62,4 +61,4 @@ ADD_EXECUTABLE(GraphTest Test.cpp)
 set_target_properties(GraphTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
 
 SET_TARGET_PROPERTIES(GraphTest PROPERTIES COMPILE_FLAGS ${GGG_COMPILE_FLAGS})
-TARGET_LINK_LIBRARIES(GraphTest ${Gosu_LIBRARIES} ${CAIROMM_LIBRARIES} graph)
+TARGET_LINK_LIBRARIES(GraphTest ${Gosu_LIBRARIES} graph)
